--- a/Задачи_на_логику.md
+++ b/Задачи_на_логику.md
@@ -31,7 +31,7 @@ $$216 : 12 = 18 \text{ (дней)}$$
 <summary><b>Решение</b></summary>
 Для начала визуализируем условие задачи на круговых диаграммах:
 
-![картинка](/picts/image.png)
+![картинка](https://github.com/Supercili0usMe/test_task/blob/main/picts/image.png)
 
 Исходя из данной картинки становится, что нам нужно найти $x$. Составим и решим уравнение:
 $$60 + x + 3x + 80 = 200 \\ 4x = 60 \\ x = 15$$
