--- a/Задачи_на_логику.md
+++ b/Задачи_на_логику.md
@@ -14,10 +14,15 @@ $$20 \$ \cdot 20\% = 4\$ $$
 <summary> <b>Решение</b></summary>
 
 Выясним изначальные параметры из примера с 5 кампаниями по 6 часами. Известно, что за **24** дня на них было потрачено **120$**, значит в 1 день на них было потрачено **5$**. Поскольку кампаний 5, то в 1 день на 1 кампанию тратился 1$.
+
 Далее составим простейшую систему: поскольку нам известно что при 6-ти часовом рабочем дне на 1 кампанию тратился 1$, то необходимо найти, сколько будет тратиться при 8-ми часовом рабочем дне. Система будет выглядеть следующим образом:
-$$ 1\$ - 6 \ ч. \\ x\$ - 8 \ ч.$$
-Решив полученную систему получается $x = \frac{4}{3}\$ $. Значит, 9 таких кампаний в день будут обходиться в:
-$$\frac{4}{3} \$ \cdot 9 = 12 \$ \text{ в день}$$ 
+
+$$1 - 6 \ ч.$$
+$$x - 8 \ ч.$$
+
+Решив полученную систему получается $x = \frac{4}{3}$. Значит, 9 таких кампаний в день будут обходиться в:
+
+$$\frac{4}{3} \cdot 9 = 12 \text{ в день}$$ 
 Ну и окончательный ответ находится простым делением общего бюджета на затраты в день:
 $$216 : 12 = 18 \text{ (дней)}$$
 
@@ -34,7 +39,8 @@ $$216 : 12 = 18 \text{ (дней)}$$
 ![картинка](https://github.com/Supercili0usMe/test_task/blob/main/picts/image.png)
 
 Исходя из данной картинки становится, что нам нужно найти $x$. Составим и решим уравнение:
-$$60 + x + 3x + 80 = 200 \\ 4x = 60 \\ x = 15$$
+$$60 + x + 3x + 80 = 200$$
+$$4x = 60 \\ x = 15$$
 </details>
 
 **Ответ:** Всего 15 баннеров </br></br>
@@ -80,7 +86,9 @@ $$S_5 = \frac{x_1 + x_2 + x_3 + x_4 + x_5}{5} = 80$$
 
 Подставим во второе уравнение первое и решим полученное уравнение:
 $$S_5 = \frac{4S_4 + x_5}{5} = 80 \rightarrow \frac{4 \cdot 78 + x_5}{5} = 80$$
-$$x_5 = 80 \cdot 5 - 78 \cdot 4 \\ x_5 = 400 - 312 \\ x_5 = 88 $$
+$$x_5 = 80 \cdot 5 - 78 \cdot 4$$ 
+$$x_5 = 400 - 312$$
+$$x_5 = 88 $$
 
 </details>
 
@@ -92,16 +100,17 @@ $$x_5 = 80 \cdot 5 - 78 \cdot 4 \\ x_5 = 400 - 312 \\ x_5 = 88 $$
 <summary><b>Решение</b></summary>
 
 Путь в ту сторону на машине занял:
-$$ 260 \text{ (км)} : 80 \text{ (км/ч)} = 3.25 \text{ (ч)}$$
+$$260 \text{ (км)} : 80 \text{ (км/ч)} = 3.25 \text{ (ч)}$$
 
 Пусть в обратную сторону на машине занял:
-$$ 260 \text{ (км)} : 100 \text{ (км/ч)} = 2.6 \text{ (ч)}$$
+$$260 \text{ (км)} : 100 \text{ (км/ч)} = 2.6 \text{ (ч)}$$
 
 Разница между затраченными временами:
-$$ 3.25 \text{ (ч)} - 2.6 \text{ (ч)} = 0.65 \text{ (ч)}$$
+$$3.25 \text{ (ч)} - 2.6 \text{ (ч)} = 0.65 \text{ (ч)}$$
 
 Переводим это в минуты:
-$$ 0.65 \text{ (ч)} \cdot 60 = 39 \text{ (м)}$$
+$$0.65 \text{ (ч)} \cdot 60 = 39 \text{ (м)}$$
+
 </details>
 
 **Ответ:** На 39 минут </br></br>
